# pokojowo-web-project

./: .gitignore  .gitleaks.toml  AUTOPILOT.md  CLAUDE.md  EXECUTION_PLAN.md  PRODUCT_CONTEXT.md  README.md  UI-contxt.md  docker-compose.yml  project_context.md
pokojowo-scraper/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
pokojowo-scraper/admin/: index.html  package-lock.json  package.json
pokojowo-scraper/admin/src/: App.jsx  index.css
pokojowo-scraper/admin/src/components/: ApprovalQueue.jsx  ConnectionStatus.jsx  Dashboard.jsx  Header.jsx  JobsPanel.jsx  LiveJobLogs.jsx  RecentActivity.jsx  StatsOverview.jsx
pokojowo-scraper/admin/src/lib/: utils.js
pokojowo-scraper/admin/src/services/: api.js
pokojowo-scraper/config/: .env.example  proxies.txt
pokojowo-scraper/docker/: Dockerfile  docker-compose.yml
pokojowo-scraper/src/: __init__.py
pokojowo-scraper/src/agents/: __init__.py  scraper_agent.py  translation_agent.py
pokojowo-scraper/src/agents/tools/: __init__.py  api_tools.py  browser_tools.py  extraction_tools.py
pokojowo-scraper/src/api/: __init__.py  app.py
pokojowo-scraper/src/cli/: __init__.py  main.py
pokojowo-scraper/src/config/: settings.py
pokojowo-scraper/src/db/: __init__.py
pokojowo-scraper/src/models/: __init__.py  processed_listing.py  scrape_job.py  scraped_listing.py
pokojowo-scraper/src/scrapers/: __init__.py  base_scraper.py  gumtree_scraper.py  olx_scraper.py  otodom_scraper.py
pokojowo-scraper/src/services/: __init__.py  deduplication_service.py  image_service.py  pokojowo_client.py  translation_service.py
pokojowo-scraper/tests/: __init__.py  test_extraction.py  test_models.py  test_scrapers.py
(+362 files in other folders)
